--- a/index.html
+++ b/index.html
@@ -145,14 +145,19 @@
       <!-- End About Section -->
 
       <!-- ======= Features Section ======= -->
-      <section id="division" class="features">
+      <section id="division" class="division">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
             <h2 class="fw-bold">
               <span class="" style="color: var(--color-primary)">Our</span>
               Division
             </h2>
+            <h4>Surabaya Dev terdiri dari beberapa divisi yang selalu berusaha untuk<br>menghasilkan karya</h4>
           </div>
+          <div class="text-center mb-5">
+            <button class="btn btn-warning text-white fw-bold">Surabaya Dev</button>
+          </div>
+          
           <ul class="nav nav-tabs row gy-4 d-flex">
             <li class="nav-item col-6 col-md-4 col-lg-2">
               <a
@@ -161,7 +166,7 @@
                 data-bs-target="#tab-1"
               >
                 <i class="bi bi-phone color-teal"></i>
-                <h4>Social Media & Content Creative</h4>
+                <h4 class="text-uppercase">Social Media & Content Creative</h4>
               </a>
             </li>
             <!-- End Tab 1 Nav -->
@@ -173,7 +178,7 @@
                 data-bs-target="#tab-2"
               >
                 <i class="bi bi-brush color-teal"></i>
-                <h4>Graphic Designer</h4>
+                <h4 class="text-uppercase">Graphic Designer</h4>
               </a>
             </li>
             <!-- End Tab 2 Nav -->
@@ -185,7 +190,7 @@
                 data-bs-target="#tab-3"
               >
                 <i class="bi bi-mic color-teal"></i>
-                <h4>Podcaster Host Streamer</h4>
+                <h4 class="text-uppercase">Podcaster Host Streamer</h4>
               </a>
             </li>
             <!-- End Tab 3 Nav -->
@@ -197,7 +202,7 @@
                 data-bs-target="#tab-4"
               >
                 <i class="bi bi-laptop color-teal"></i>
-                <h4>Dev Team</h4>
+                <h4 class="text-uppercase">Dev Team</h4>
               </a>
             </li>
             <!-- End Tab 4 Nav -->
@@ -209,7 +214,7 @@
                 data-bs-target="#tab-5"
               >
                 <i class="bi bi-card-checklist color-teal"></i>
-                <h4>Management Event Community</h4>
+                <h4 class="text-uppercase">Management Event Community</h4>
               </a>
             </li>
             <!-- End Tab 5 Nav -->
@@ -221,7 +226,7 @@
                 data-bs-target="#tab-6"
               >
                 <i class="bi bi-person color-teal"></i>
-                <h4>Admin & Logistik</h4>
+                <h4 class="text-uppercase">Admin & Logistik</h4>
               </a>
             </li>
             <!-- End Tab 6 Nav -->
@@ -236,230 +241,31 @@
                   data-aos-delay="100"
                 >
                   <h5 class="text-center">Social Media & Content Creative</h3>
-                  <!-- <ul>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Mengelola Sosial
-                      Media bekerja sama dengan Divisi Community Engagement
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Membuat konsep
-                      konten kreatif bekerjasama dengan graphic design
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Membuat tulisan di
-                      medium (bisa meminta dari all team)
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Melakukan konversi
-                      wawancara bekerjasama dengan tim Podcast
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Mengkonversi event
-                      dari Divisi Manajemen Event Community menjadi konten
-                    </li>
-                  </ul> -->
                 </div>
-                <!-- <div
-                  class="col-lg-4 order-1 order-lg-2 text-center"
-                  data-aos="fade-up"
-                  data-aos-delay="200"
-                > -->
-                <!-- <img
-                    src="assets/img/features-1.svg"
-                    alt=""
-                    class="img-fluid"
-                  /> -->
-                <!-- </div> -->
               </div>
             </div>
             <!-- End Tab Content 1 -->
 
-            <!-- <div class="tab-pane" id="tab-2">
-              <div class="row gy-4">
-                <div class="col-lg-8 order-2 order-lg-1">
-                  <h3>Graphic Designer</h3>
-                  <ul>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Membuat Desain
-                      Content dari Planner Divisi Socmed & Content Creative.
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Membuat Desain
-                      Poster Event dari Divisi Manajemen Event Community
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Membuat Desain
-                      kebutuhan Dev Team
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Mengkonversi
-                      desain presentasi agar lebih menarik
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-4 order-1 order-lg-2 text-center">
-                  <img
-                    src="assets/img/features-2.svg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-              </div>
-            </div> -->
+            <div class="tab-pane" id="tab-2">
+              <h5 class="text-center">Graphic Designer</h5>
+            </div>
             <!-- End Tab Content 2 -->
-
-            <!-- <div class="tab-pane" id="tab-3">
-              <div class="row gy-4">
-                <div class="col-lg-8 order-2 order-lg-1">
-                  <h3>Podcaster Host Streamer</h3>
-                  <ul>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Bertugas sebagai
-                      MC/Host saat event online/offline
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Bertugas sebagai
-                      moderator/host Live Instagram/podcast
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Bertugas sebagai
-                      perantara komunikasi wawancara apabila dibutuhkan dalam
-                      membuat konten
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-4 order-1 order-lg-2 text-center">
-                  <img
-                    src="assets/img/features-3.svg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-              </div>
-            </div> -->
-            <!-- End Tab Content 3 -->
-
-            <!-- <div class="tab-pane" id="tab-4">
-              <div class="row gy-4">
-                <div class="col-lg-8 order-2 order-lg-1">
-                  <h3>Dev Team</h3>
-                  <ul>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Membuat project
-                      website surabaya dev
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Monitoring project
-                      website as project manager
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Menjadi reviewer
-                      konten seputar programming
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> berkontribusi
-                      dalam pembuatan informasi seputar programming
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> sangat terbuka
-                      untuk menjadi speaker / sharing session
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-4 order-1 order-lg-2 text-center">
-                  <img
-                    src="assets/img/features-4.svg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-              </div>
-            </div> -->
-            <!-- End Tab Content 4 -->
-
-            <!-- <div class="tab-pane" id="tab-5">
-              <div class="row gy-4">
-                <div class="col-lg-8 order-2 order-lg-1">
-                  <h3>Management Event Community</h3>
-                  <ul>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Menyusun hingga
-                      mengelola acara
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Mencari speaker
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Merencanakan topik
-                    </li>
-                    <li>
-                      <i class="bi bi-check-circle-fill"></i> Melakukan
-                      koordinasi dengan pihak luar
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-4 order-1 order-lg-2 text-center">
-                  <img
-                    src="assets/img/features-5.svg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-              </div>
-            </div> -->
-            <!-- End Tab Content 5 -->
-
-            <!-- <div class="tab-pane" id="tab-6">
-              <div class="row gy-4">
-                <div class="col-lg-8 order-2 order-lg-1">
-                  <h3>Admin & Logistik</h3>
-                  <div class="row">
-                    <div class="col-auto">
-                      <p>Admin</p>
-                      <ul>
-                        <li>
-                          <i class="bi bi-check-circle-fill"></i> Menjawab
-                          pertanyaan inbox
-                        </li>
-                        <li>
-                          <i class="bi bi-check-circle-fill"></i> Meneruskan
-                          informasi
-                        </li>
-                        <li>
-                          <i class="bi bi-check-circle-fill"></i> Membagikan
-                          konten dari platform ke grup
-                        </li>
-                        <li>
-                          <i class="bi bi-check-circle-fill"></i> Membuat
-                          diskusi tentang tech di grup
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-auto">
-                      <p>Logistik</p>
-                      <ul>
-                        <li>
-                          <i class="bi bi-check-circle-fill"></i> Menyiapkan
-                          merchandise
-                        </li>
-                        <li>
-                          <i class="bi bi-check-circle-fill"></i> Menyiapkan
-                          logistik event offline
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 order-1 order-lg-2">
-                  <img
-                    src="assets/img/features-6.svg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-              </div>
-            </div> -->
-            <!-- End Tab Content 6 -->
+            <div class="tab-pane" id="tab-3">
+              <h5 class="text-center">Podcaster Host Streamer</h5>
+            </div>
+            <!-- End Tab Content 2 -->
+            <div class="tab-pane" id="tab-4">
+              <h5 class="text-center">Dev Team</h5>
+            </div>
+            <!-- End Tab Content 2 -->
+            <div class="tab-pane" id="tab-5">
+              <h5 class="text-center">Management Event Community</h5>
+            </div>
+            <!-- End Tab Content 2 -->
+            <div class="tab-pane" id="tab-6">
+              <h5 class="text-center">Admin & Logistik</h5>
+            </div>
+            <!-- End Tab Content 2 -->
           </div>
         </div>
       </section>
