fix socmed link

--- a/index.html
+++ b/index.html
@@ -837,16 +837,16 @@
 					</nav>
 				</div>
 				<div class="footer-social">
-					<a href="" class="social-link">
+					<a href="https://www.youtube.com/@surabayadev/videos" class="social-link" target="_blank">
 						<i class="bi bi-youtube"></i>
 					</a>
-					<a href="" class="social-link">
+					<a href="https://www.instagram.com/surabayadev" class="social-link" target="_blank">
 						<i class="bi bi-instagram"></i>
 					</a>
-					<a href="" class="social-link">
+					<a href="https://www.facebook.com/surabayadev" class="social-link" target="_blank">
 						<i class="bi bi-facebook"></i>
 					</a>
-					<a href="" class="social-link">
+					<a href="https://twitter.com/SurabayaDev" class="social-link" target="_blank">
 						<i class="bi bi-twitter"></i>
 					</a>
 				</div>
