--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                   <div class="icon">
                     <i class="bi bi-easel"></i>
                   </div>
-                  <a href="#" class="stretched-link">
+                  <a href="#our-event" class="stretched-link">
                     <h3>Meetup</h3>
                   </a>
                   <p>(Seminar/Webinar)
@@ -295,7 +295,7 @@
                   <div class="icon">
                     <i class="bi bi-gear"></i>
                   </div>
-                  <a href="#" class="stretched-link">
+                  <a href="#our-event" class="stretched-link">
                     <h3>Upgradding Skill</h3>
                   </a>
                   <p>
@@ -324,7 +324,7 @@
                   <div class="icon">
                     <i class="bi bi-bounding-box-circles"></i>
                   </div>
-                  <a href="#" class="stretched-link">
+                  <a href="#our-event" class="stretched-link">
                     <h3>Kolaborasi Komunitas</h3>
                   </a>
                   <p>
