--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                   <p>
                     Sinergi antar komunitas guna untuk mendukung kegiatan komunitas lokal teknologi di Indonesia
                   </p>
-                  <a href="#" class="stretched-link"></a>
+                  <a href="#our-event" class="stretched-link"></a>
                 </div>
               </div>
             </div>
